// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorButton renders selected 1`] = `
<TouchableHighlight
  accessibilityLabel="Choose #333"
  accessible={true}
  onPress={[Function]}
  style={
    Object {
      "height": 48,
      "margin": 8,
    }
  }
  testID="colorButton.#333"
  underlayColor="#FFFFFF"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 24,
          "height": 48,
          "justifyContent": "center",
          "width": 48,
        },
        Object {
          "backgroundColor": "#333",
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/images/check-white.png",
        }
      }
    />
  </View>
</TouchableHighlight>
`;

exports[`ColorButton renders unselected 1`] = `
<TouchableHighlight
  accessibilityLabel="Choose #fff"
  accessible={true}
  onPress={[Function]}
  style={
    Object {
      "height": 48,
      "margin": 8,
    }
  }
  testID="colorButton.#fff"
  underlayColor="#FFFFFF"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 24,
          "height": 48,
          "justifyContent": "center",
          "width": 48,
        },
        Object {
          "backgroundColor": "#fff",
        },
      ]
    }
  />
</TouchableHighlight>
`;
